# carpenter_genealogy

./: .env.example  .gitignore  CLAUDE.md  FAMILY_TREE_VIEWER_GUIDE.md  FASTAPI_LEARNING_GUIDE.md  README.md  api.py  app.py  check_models.py  data_entry_tool.py  family_tree_viewer.html  monitor_tokens.py  pdf_prompt.txt  prompt.txt  pyproject.toml  requirements.txt  setup.sh  test_token_usage.py  tidy_tree.js
data/exports/: d3_test_tree.html  family_tree.html
data/structured_db/: genealogy.db
docs/: CLAUDE_API_GUIDE.md  TOKEN_TRACKING.md
parsers/: ingest_pdf.py  parse_john_lineage.py  parse_stephen_lineage.py  populate_alexander_lineage.py  populate_berry_lineage.py  populate_george_lineage.py  populate_john_lineage.py  populate_mary_lineage.py  populate_milly_lineage.py  populate_richard_lineage.py  populate_stephen_lineage.py  populate_susan_lineage.py
src/: __init__.py
src/agents/: __init__.py  citation_generator.py  confidence_checker.py  fact_extractor.py  fact_verifier.py  lineage_tracer.py  query_router.py  rag_retrieval.py  structured_query.py  synthesizer.py  workflow.py
src/api/: __init__.py  dependencies.py  routes.py
src/database/: __init__.py  models.py  structured_store.py  vector_store.py
src/processors/: __init__.py  pdf_processor.py  relationship_extractor.py
src/ui/: __init__.py  family_tree_tab.py  gradio_app.py
src/utils/: config.py  llm_tracker.py  token_tracker.py
src/visualizations/: __init__.py  d3_tidy_tree.py  family_tree_viz.py  graph_builder.py
tests/: __init__.py  test_database.py  test_workflow.py
